# screen-ai

./: .gitignore  CLAUDE.md  Caddyfile  LICENSE  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  ef24d0ee3322_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  analyses.py  auth.py  compounds.py  experiments.py  images.py  plates.py  projects.py  wells.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  analysis.py  base.py  compound.py  experiment.py  image.py  plate.py  project.py  user.py  well.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  base.py  common.py  compound.py  experiment.py  image.py  pagination.py  plate.py  project.py  user.py  well.py
backend/scripts/: seed_admin.py
backend/tests/: test_health.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthProvider.tsx  ExperimentsTable.tsx  Layout.tsx  PlateGrid.tsx  ProjectTree.tsx  ProtectedRoute.tsx  WellDetailPanel.tsx
frontend/src/contexts/: AuthContext.ts  AuthContext.tsx
frontend/src/mocks/: experimentDetail.ts  experiments.json  projects.json
frontend/src/pages/: DashboardPage.tsx  ExperimentDetailPage.tsx  Login.tsx  (+3 more)
(+5 files in other folders)
